package com.clinicks.exception;

public class InvitacionInvalidaException extends RuntimeException {

    public InvitacionInvalidaException(String mensaje) {
        super(mensaje);
    }
}
